# Cengal

./: .coveragerc  .gitignore  404.html  CHANGES.md  IDGenerator.py  MANIFEST.in.template  NOTICE  README.md  RequestCache.py  ServerClock.py  THIRD_PARTY_LICENSES.md  before_install_on_ubuntu.sh  before_install_on_wsl.sh  build_ext.cmd  build_ext.sh  build_ext_inplace.sh  build_ext_inplace_debug.cmd  build_ext_inplace_debug.sh  build_wheel__linux.sh  build_wheel__windows__2019.cmd  build_wheel__windows__2022.cmd  check_is_in_pycharm.py  docten.py  fix_permissions.sh  help_tools.py  index.html  install_in_dev_mode.cmd  install_in_dev_mode.sh  install_in_dev_mode_debug.sh  mkdocs.yml  prepare__setup.cmd  prepare__setup.sh  prepare__setup_light.cmd  prepare__setup_light.sh  prepare__setup_pure.cmd  prepare__setup_pure.sh  prepare__setup_shell.cmd  prepare__setup_shell.sh  prepare__setup_shell_main.cmd  prepare__setup_shell_main.sh  (+37 more)
.github/workflows/: __build_macos.-yaml  build__.-yaml  build__macos__light.-yaml  build__macos__light.yaml  build__macos__shell.-yaml  build__macos__shell.yaml  build_macos.yaml  build_macos.yml  test_app_dir_path_finder.-yaml  test_shared_memory.-yaml  test_shared_memory.yaml
bulk_pip_actions/: __init__.py  bulk_install.py  install.py
cengal/: IDGenerator.py  RequestCache.py  ServerClock.py  __init__.py  base.py  check_is_in_pycharm.py  docten.py  help_tools.py  system.py
cengal/_examples/: __init__.py
cengal/_template_module/: __init__.py
cengal/bulk_pip_actions/: __init__.py  bulk_install.py  install.py
cengal/file_system/: __init__.py  (+2 more)
cengal/hardware/memory/barriers/versions/v_0/package/: example.py  index.html  pyproject.toml
cengal/hardware/memory/barriers/versions/v_0/package/LICENSE/: index.html
cengal/hardware/memory/barriers/versions/v_0/package/cengal_memory_barriers/: __init__.py
cengal_setup_scripts/: __init__.py  compile_all_cython_modules.py  setup__dynamic_list_of_pieces.py  setup__recv_buff_size_computer.py  setup__repeat_for_a_time.py
cengal_setup_scripts/setup/setup_light/: README.md  build_wheel__linux.sh  build_wheel__windows__2019.cmd  build_wheel__windows__2022.cmd  pyproject.toml  readme_update.py  requirements.txt  setup.py
code_flow_control/: __init__.py  examples.py  result_types.py  smart_chain.py
code_inspection/: __init__.py  line_profiling.py  line_tracer.py
coroutines_concepts/: index.html
cross_version/: __init__.py
data_containers/: __init__.py  compound_dict_management.py  fast_fifo.py  front_triggerable_variable.py
docs/: coroutines_concepts.md  forced_concurrency.md  index.md  interprocess_shared_memory.md
examples/: general_example.py  rich_example.py  simple_example.py  third_party_cpu_bound.py
file_settings_manager/: __init__.py  config_manager.py  dir_templates.py
file_system/: __init__.py  directory_manager.py  file_manager.py
forced_concurrency/: index.html
interprocess_shared_memory/: index.html
modules_management/: __init__.py  alternative_import.py  reload_module.py
multiprocess/: __init__.py  multiprocess_testing.py  multiprocessing_task_pool.py  multiprocessing_task_runner.py
net_io/: net_io__linux.py  net_io_abstract.py  net_io_method__epoll_lt.py
performance_test_lib/: __init__.py  examples.py  performance_test_lib.py
scripts/: __init__.py  compile_all_cython_modules.py  setup__dynamic_list_of_pieces.py  setup__recv_buff_size_computer.py  setup__repeat_for_a_time.py
setup_scripts/: compile_all_cython_modules.py  cythonyser_setup_runner.py  setup__dynamic_list_of_pieces.py  setup__recv_buff_size_computer.py
simple_network/: __init__.py  base.py  tcp_app_server.py  tcp_link.py
testing_lib/: tests_list_runner.py
tests/: __init__.py
text_processing/: __init__.py  help_tools.py
upk_helping_tools/: upk_api.py  upk_constants.py  upk_utils_api.py
various_tools/: all_tools_runner.py  copy_dir.py  count_loc_py.py  find_all_file_extensions_in_folder.py  find_files.py  find_in_files.py  list_simlinks.py  replace_in_files.py  tools_global_config.py  unit_converter.py
(+2109 files in other folders)
