[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools", 
    "wheel", 
    "debugpy", 
    "Cython>=0.29.34", 
    "py-cpuinfo", 
    "charset-normalizer; python_version < '3.13'", 
    "patch-ng; python_version >= '3.12' or (platform_python_implementation == 'PyPy' and platform_system == 'Windows')"
]  # PEP 508 specifications.
